Revision history for Dist-Zilla-Plugin-CheckExtraTests

{{$NEXT}}

0.021     2014-03-25 14:34:02-04:00 America/New_York

    [Fixed]

    - specifies Path::Tiny prerequisite of 0.013 or better

0.020     2014-03-22 23:12:58-04:00 America/New_York

    [Fixed]

    - default jobs support was buggy in the last version

0.019     2014-03-22 22:48:04-04:00 America/New_York

    [Changed]

    - Added 'jobs' argument for 'dzil xtest' for parallel testing

    - passing new 'default_jobs' option (added to Dist::Zilla 5.014) through
      to test runner for parallel testing

0.018     2014-02-18 17:20:58-05:00 America/New_York

    [Fixed]

    - CheckExtraTest now force removes temp directory, the way
      Path::Class used to do.

0.017     2014-02-13 15:03:55-05:00 America/New_York

    [Changed]

    - Removed dependency on Path::Class in favor of Path::Tiny

0.016     2013-11-15 11:33:06 America/New_York

    [Changed]

    - the 'xtest' command now accepts the same options as 'test' does

0.015     2013-10-31 15:03:13 America/New_York

    - Shipping as a stable release

0.014     2013-10-23 19:52:43 America/New_York

    [Fixed]

    - [CheckExtraTest] tests in a .build directory instead of the build
      directory

    - the 'xtest' command now uses Dist::Zilla methods to build a temporary
      directory, which also sets the .build/latest symlink correctly

0.013     2013-10-17 17:26:26 America/New_York

    [Changed]

    - [RunExtraTests] now runs xt/author ahead of xt/smoke and xt/release
      (Karen Etheridge)

0.012     2013-10-15 23:15:02 America/New_York

    [Changed]

    - 'dzil xtest' arguments now match as regex patterns for more
      flexibility

    [Fixed]

    - use all builders to build, not just the first (Karen Etheridge)

0.011     2013-02-09 20:53:59 America/New_York

    - Doc fixes (ETHER)

    - Path::Tiny fix (ETHER)

0.010     2013-02-07 23:09:15 America/New_York

    - Bump Dist::Zilla prereq to something modernish
